<resources>
    <string name="app_name">Cinema</string>


    <!-- Action -->

    <string name="action_Sign_in">Đăng nhập</string>
    <string name="action_Reset_password">Đặt lại mật khẩu</string>
    <string name="action_Sign_up">Đăng ký</string>

    <string name="action_Log_out">Đăng xuất</string>
    <string name="action_choose_image">Chọn ảnh</string>
    <string name="action_create_film">Tạo phim</string>
    <string name="action_change_password">Sửa đổi mật khẩu</string>
    <string name="action_sign_out">Đăng xuất</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>

    <!-- Message -->

    <string name="msg_film_name"> Tên phim</string>
    <string name="msg_film_kind"> Thể loại</string>
    <string name="msg_start_day"> Ngày phát hành</string>
    <string name="msg_discription">Mô tả </string>
    <string name="msg_or"> hoặc </string>
    <string name="msg_my_film">Phim của tôi</string>
    <string name="msg_change_password">Thay đổi mật khẩu</string>
    <string name="msg_change_username">Thay đổi username</string>
    <string name="msg_change_phone_number">Thay đổi số điện thoại</string>
    <string name="msg_sign_out">Bạn có muốn đăng xuất ?</string>
    <string name="msg_reset_password">Đặt lại mật khẩu </string>

    <!-- Title -->
    <string name="title_create_new_film">TẠO PHIM MỚI</string>
    <string name="titile_list_film">DANH SÁCH PHIM</string>
    <string name="title_Sign_up">ĐĂNG KÝ</string>
    <string name="title_Sign_in">ĐĂNG NHẬP</string>

    <!-- Hint -->
    <string name="hint_username"> Username</string>
    <string name="hint_email"> Email</string>
    <string name="hint_password"> Mật khẩu</string>
    <string name="hint_reinput_password"> Xác nhận lại mật khẩu</string>
    <string name="hint_old_password"> Mật khẩu cũ</string>
    <string name="hint_new_password"> Mật khẩu mới</string>
    <string name="hint_search_film"> Nhập tên phim cần tìm</string>
</resources>
