<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CreateFilmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        android:background="@color/colorTitle"
        >
        <TextView
            android:text="@string/title_create_new_film"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/colorText"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_view_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_choose_image"
        android:layout_gravity="center"
        android:background="@color/colorTitle"
        android:textColor="@color/colorText"
        />
    <TextView
        android:id="@+id/text_view_film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_film_name"
        />
    <EditText
        android:id="@+id/edit_text_film_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_view_kind"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/msg_film_kind"
        />


    <Spinner
        android:id="@+id/spinner_kind"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <TextView
        android:id="@+id/text_view_start_day"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/msg_start_day"
        />

    <EditText
        android:id="@+id/edit_text_start_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/text_view_discription"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/msg_discription"
        />
    
    <EditText
        android:id="@+id/edit_text_discription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />
    <Button
        android:id="@+id/button_create_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_create_film"
        android:background="@color/colorTitle"
        android:textColor="@color/colorText"
        />



</LinearLayout>