<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorTitle"
        android:layout_gravity="center"
        android:text="@string/msg_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_old_password"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/roundedtext"
        />
    <EditText
        android:id="@+id/edit_text_new_password"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/roundedtext"/>

    <EditText
        android:id="@+id/edit_text_reinput_new_password"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/hint_reinput_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/roundedtext"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/button_effect"
            android:layout_marginLeft="10dp"
            android:id="@+id/button_cancel"
            android:textColor="@color/colorText"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        <Button
            android:background="@drawable/button_effect"
            android:layout_marginRight="10dp"
            android:id="@+id/button_ok"
            android:textColor="@color/colorText"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/action_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>