<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_sign_up_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">
    <TextView
        android:text="@string/title_Sign_in"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorText"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.nguyen.cinema.Data.Model.IconTextView
                android:text="@string/fas_email"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_text_email_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="26dp"
                android:background="@drawable/roundedtext2"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/colorText2" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.nguyen.cinema.Data.Model.IconTextView
                android:text="@string/fas_lock"
                android:paddingLeft="2dp"
                android:textColor="@color/colorText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                />
            <EditText
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:id="@+id/edit_text_password_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/colorText2"
                android:hint="@string/hint_password"
                android:background="@drawable/roundedtext2"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_Sign_in_2"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/button_login_effect"
            android:text="@string/action_Sign_in"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/msg_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            />
        <Button
            android:id="@+id/button_Sign_up_2"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/button_login_effect"
            android:text="@string/action_Sign_up"
            android:textColor="@color/colorText"
            android:textStyle="bold"

            />


    </LinearLayout>

</LinearLayout>