<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_sgn_up_6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:gravity="center"
    tools:context=".Activity.ResetPasswordActivity">

    <TextView
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/msg_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/edit_text_reset_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedtext"
        android:hint="@string/hint_email"
        android:textColorHint="@color/colorText"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp">

        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/button_login_effect"

            android:id="@+id/button_cancel_reset_password"
            android:textColor="@color/colorText"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            android:layout_width="120dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        <Button
            android:background="@drawable/button_login_effect"

            android:id="@+id/button_ok_reset_password"
            android:textColor="@color/colorText"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/action_ok"
            android:layout_width="120dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>