<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.FilmInfoActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/view_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:background="@color/colorTitle"
            />
        <TextView
            android:layout_alignParentBottom="true"

            android:id="@+id/text_creator_name"
            android:text="@string/action_Reset_password"
            android:layout_width="match_parent"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="80dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="50dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/avatar"
            />

    </RelativeLayout>


            <android.support.v7.widget.CardView
                android:id="@+id/card_view_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-30dp"
                app:cardCornerRadius="20dp"
                >
                <LinearLayout
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_film_name"


                    />
                    <TextView
                        android:id="@+id/text_title"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_film_name"

                        android:textColor="@color/colorTitle"
                        />
                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_start_day"

                    />
                    <TextView
                        android:id="@+id/text_release"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_start_day"

                        android:textColor="@color/colorTitle"/>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="THỂ LOẠI"

                        />
                    <TextView
                        android:id="@+id/text_genre"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="THỂ LOẠI"

                        android:textColor="@color/colorTitle"/>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MÔ TẢ"

                        />
                    <TextView
                        android:id="@+id/text_discription"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MÔ TẢ"

                        android:textColor="@color/colorTitle"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>





</LinearLayout>